--- a/boids/index.html
+++ b/boids/index.html
@@ -11,8 +11,9 @@
 		<script defer src="/static/scripts/2D/circle.js"></script>
 		<script defer src="/static/scripts/2D/quadTree.js"></script>
 		<script defer src="/static/scripts/animationTime.js"></script>
-		<script defer src="/projects/boids/flockUnit.js"></script>
-		<script defer src="/projects/boids/main.js"></script>
+
+		<script defer src="/boids/scripts/flockUnit.js"></script>
+		<script defer src="/boids/scripts/main.js"></script>
 	</head>
 	<body style="margin: 0; width: 100vw; height: 100vh; overflow: hidden; background-color: #1f1f27">
 		<div style="color: #f7f7f7; text-align: center;">Requires Javascript. Or something is wrong.</div>
