--- a/boids/index.html
+++ b/boids/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf8">
 		<meta name="viewport" content="width=device-width">
 		<title>Boids</title>
-		<link rel="canonical" href="https://projects.propulsivefox.space/boids">
+		<link rel="canonical" href="https://projects.propulsivefox.space/boids/">
 		
 		<script defer src="/static/scripts/2D/vector.js"></script>
 		<script defer src="/static/scripts/2D/rect.js"></script>
