--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf8">
 		<meta name="viewport" content="width=device-width">
 		<title>Projects | PropulsiveFox</title>
-		<link rel="canonical" href="https://projects.propulsivefox.space">
+		<link rel="canonical" href="https://projects.propulsivefox.space/">
 
 		<link rel="stylesheet" href="/static/stylesheets/general.css">
 		
