--- a/boids/index.html
+++ b/boids/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="utf8">
 		<meta name="viewport" content="width=device-width">
-		<title>Boids</title>
+		<title>Boids | PropulsiveFox</title>
 		<link rel="canonical" href="https://projects.propulsivefox.space/boids/">
-		
+		<script defer src="/static/scripts/icons.js" id="icons-script"></script>
+
 		<script defer src="/static/scripts/2D/vector.js"></script>
 		<script defer src="/static/scripts/2D/rect.js"></script>
 		<script defer src="/static/scripts/2D/circle.js"></script>
