--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
 				</div>
 			</div>
 		</header>
-		<div class="container-xl mx-auto px-16">
+		<div class="container-xl cy-auto px-16 mx-auto" style="min-height: calc(100vh - 41px);">
 			<div id="projects-grid">
 			</div>
 		</div>
+		<footer>
+			<div class="container-xl mx-auto gray" id="simple-footer" style="font-size: 0.75rem;">
+				© 2022 PropulsiveFox
+			</div>
+		</footer>
 	<body>
 </html>
