--- a/boids/index.html
+++ b/boids/index.html
@@ -7,14 +7,7 @@
 		<link rel="canonical" href="https://projects.propulsivefox.space/boids/">
 		<script defer src="/static/scripts/icons.js" id="icons-script"></script>
 
-		<script defer src="/static/scripts/2D/vector.js"></script>
-		<script defer src="/static/scripts/2D/rect.js"></script>
-		<script defer src="/static/scripts/2D/circle.js"></script>
-		<script defer src="/static/scripts/2D/quadTree.js"></script>
-		<script defer src="/static/scripts/animationTime.js"></script>
-
-		<script defer src="/boids/scripts/flockUnit.js"></script>
-		<script defer src="/boids/scripts/main.js"></script>
+		<script type="module" src="/boids/scripts/main.js"></script>
 	</head>
 	<body style="margin: 0; width: 100vw; height: 100vh; overflow: hidden; background-color: #1f1f27">
 		<div style="color: #f7f7f7; text-align: center;">Requires Javascript. Or something is wrong.</div>
